--- a/external/NPB_lib/NPB3.4.2/NPB3.4-MPI/CG/Makefile
+++ b/external/NPB_lib/NPB3.4.2/NPB3.4-MPI/CG/Makefile
@@ -14,8 +14,8 @@ ${PROGRAM}: config ${OBJS} cg.o cg-lib tester
 	${FLINK} ${FLINKFLAGS} -o ${PROGRAM} ${OBJS} cg.o ${FMPI_LIB};
 
 # Special build step for a shared library
-cg-lib: config ${OBJS} cg_lib.o
-	${FLINK} ${FLINKFLAGS} -shared -fPIC -o ${BINDIR}/lib$(notdir ${PROGRAM}).so ${OBJS} cg_lib.o ${FMPI_LIB}
+cg-lib: config ${OBJS} cg_lib.o lib.o
+	${FLINK} ${FLINKFLAGS} -shared -fPIC -o ${BINDIR}/lib$(notdir ${PROGRAM}).so ${OBJS} cg_lib.o lib.o ${FMPI_LIB}
 
 .f90.o:
 	${FCOMPILE} $<
@@ -24,7 +24,8 @@ cg-lib: config ${OBJS} cg_lib.o
 	${CCOMPILE} $<
 
 cg.o:		cg.f90  cg_data.o mpinpb.o
-cg-lib.o: cg_lib.f90 cg_data.o mpinpb.o
+cg_lib.o: cg_lib.f90 cg_data.o mpinpb.o
+lib.o:  lib.c cg_data.o mpinpb.o
 cg_data.o:	cg_data.f90 mpinpb.o npbparams.h
 mpinpb.o:	mpinpb.f90
 
