--- a/external/rFaaS-benchmarks/images/Dockerfile.thumbnailer
+++ b/external/rFaaS-benchmarks/images/Dockerfile.thumbnailer
@@ -9,6 +9,7 @@ FROM ubuntu:22.04
 
 COPY --from=builder /opt/ /opt/
 ENV LD_LIBRARY_PATH=/function
+ENV LIBRARY_PATH=/function/libthumbnailer.so
 
 RUN mkdir ${HOME}/function
 COPY --from=builder ${HOME}/build_img/test-client ${HOME}/function/
